project/stage/tests/accept/base_accept.ul
void main(){
  int i;
  boolean b;
  i = 5;
  b = i * i + i == i < i;
}