project/stage/tests/reject/reject_paren_mismatch.ul
void main(){
  int a;
  int b;
  int c;
  int d;
  a = 5;
  b = 10;
  c = 2;
  
  d = ((((a)))) + (b) * ((c - a) + b) - (c * c)) - ((((c) + d) * a) * a) *a) 
}